<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_menu">


    <Button
        android:id="@+id/btn_help_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_help_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_settings_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_settings_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_new_scan_home"
        android:layout_width="278dp"
        android:layout_height="112dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="67dp"
        android:text="@string/btn_new_scan_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_manually_home" />

    <Button
        android:id="@+id/btn_manually_home"
        android:layout_width="278dp"
        android:layout_height="112dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="67dp"
        android:text="@string/btn_manually_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_open_website_home" />

    <Button
        android:id="@+id/btn_open_website_home"
        android:layout_width="278dp"
        android:layout_height="112dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="67dp"
        android:text="@string/btn_open_website_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_manually_history_home" />

    <Button
        android:id="@+id/btn_manually_history_home"
        android:layout_width="132dp"
        android:layout_height="107dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="47dp"
        android:text="@string/btn_manually_history_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_help_home" />

    <Button
        android:id="@+id/btn_scan_history_home"
        android:layout_width="132dp"
        android:layout_height="107dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="67dp"
        android:text="@string/btn_scan_history_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings_home" />

</androidx.constraintlayout.widget.ConstraintLayout>