<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/misc_cghs_nl_creation"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/misc_cghs_nl_creation"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/txt_terms_of_use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:gravity="center"
        android:text="@string/txt_terms_of_use"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/misc_cghs_nl_creation" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="159dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/btn_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_terms_of_use" />

    <Button
        android:id="@+id/btn_decline"
        android:layout_width="159dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_decline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_terms_of_use" />


</androidx.constraintlayout.widget.ConstraintLayout>